syntax = "proto3";

package mall;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
option go_package = "mall-go/api/mall";

service Coupon {
    rpc GetCouponByCategory(CouponByCategoryRequest) returns (Coupons) {
        option (google.api.http) = {
          get : "/coupon/by/category/{id}"
        };
      }
      rpc GetWholeCoupon(google.protobuf.Empty) returns (Coupons) {
        option (google.api.http) = {
          get : "/coupon/by/whole_store"
        };
      }
      rpc GetMyCouponByStatus(MyCouponByStatusRequest) returns (Coupons) {
        option (google.api.http) = {
          get : "/coupon/myself/by/status/{status}"
        };
      }
      rpc GetMyAvailableCoupon(google.protobuf.Empty) returns (Coupons) {
        option (google.api.http) = {
          get : "/coupon/myself/available/with_category"
        };
      }
      rpc CollectCoupon(CollectCouponRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
          post : "/coupon/collect/{id}"
          body : "*"
        };
      }
}
message CouponByCategoryRequest { int64 id = 1; }
message MyCouponByStatusRequest { string status = 1; }
message CollectCouponRequest { string id = 1; }

message Coupons { repeated CouponBo coupon = 1; }
message CouponBo {
  uint32 id = 1;
  string title = 2;
  uint64 start_time = 3;
  uint64 end_time = 4;
  string description = 5;
  string full_money = 6;
  double minus = 7;
  string rate = 8;
  uint32 type = 9;
  string remark = 10;
  bool whole_store = 11;
}